--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   font-family: 'Playfair Display', serif;
   color: #fdfaf5;
   line-height: 1.6;
-  posistion: relative;
+  position: relative;
   overflow-x: hidden;
 }
 
